--- a/results/r_2_logical_reasoning/logical_reasoning.ipynb
+++ b/results/r_2_logical_reasoning/logical_reasoning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
     "\n",
     "latex_df = latex_df.set_index(\"Task\")\n",
     "latex_df = latex_df.applymap(lambda x: f\"{x:.1f}\")\n",
-    "\n",
+    "latex_df['PoE - MCP'] = latex_df['PoE - MCP'].apply(lambda x: \"+\" + x if float(x) > 0 else x)\n",
     "\n",
     "latex_df.style.to_latex(\n",
     "    buf=\"logical_reasoning.tex\",\n",
@@ -147,18 +147,11 @@
     "    position=\"h\",\n",
     "    position_float=\"centering\",\n",
     "    label=\"tab:logical_reasoning\",\n",
-    "    caption=r\"Comparison of MCP and PoE accuracy scores on 8 new tasks. The first 4 tasks are logical reasoning tasks. PoE largely outperforms MCP on 4 logical reasoning tasks, and underperforms on 4 other tasks.\",\n",
+    "    caption=r\"Comparison of MCP and PoE accuracy scores on 8 new tasks. The top 4 tasks are logical reasoning tasks. PoE largely outperforms MCP on 4 logical reasoning tasks, and underperforms MCP on other 4 tasks.\",\n",
     "    multicol_align=\"c\",\n",
     "    multirow_align=\"c\",\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
