--- a/results/llm/llm_camera_ready.tex
+++ b/results/llm/llm_camera_ready.tex
@@ -1,21 +1,21 @@
 \begin{table}[h]
 \centering
-\caption{PoE's zero-shot performance on ChatGPT (\texttt{gpt-3.5-turbo-0613}). The last 4 rows represent 4 logical reasoning tasks introduced in Section \ref{sec:logical_reasoning}. PoE consistently outperforms MCP, especially on logical reasoning tasks.}
+\caption{PoE's zero-shot performance on ChatGPT (\texttt{gpt-3.5-turbo-0613}). The bottom 4 rows represent 4 logical reasoning tasks introduced in Section \ref{sec:logical_reasoning}. PoE consistently outperforms MCP, especially on logical reasoning tasks.}
 \label{tab:llm}
 \begin{tabular}{l|c|c|c}
 method & MCP & PoE & PoE - MCP \\
 Task &  &  &  \\
-SIT & 2.0 & 19.4 & 17.4 \\
-ANLI & 40.2 & 44.6 & 4.4 \\
-SS & 79.4 & 82.8 & 3.4 \\
-CQA & 75.0 & 77.0 & 2.0 \\
-LD & 37.6 & 38.0 & 0.4 \\
+SIT & 2.0 & 19.4 & +17.4 \\
+ANLI & 40.2 & 44.6 & +4.4 \\
+SS & 79.4 & 82.8 & +3.4 \\
+CQA & 75.0 & 77.0 & +2.0 \\
+LD & 37.6 & 38.0 & +0.4 \\
 SIQA & 72.6 & 71.2 & -1.4 \\
 DQA & 48.8 & 42.6 & -6.2 \\
 CC & 79.6 & 66.8 & -12.8 \\
-RACO & 4.8 & 50.4 & 45.6 \\
-IMT & 34.0 & 49.8 & 15.8 \\
-LA & 50.0 & 55.0 & 5.0 \\
+RACO & 4.8 & 50.4 & +45.6 \\
+IMT & 34.0 & 49.8 & +15.8 \\
+LA & 50.0 & 55.0 & +5.0 \\
 CLD & 92.4 & 91.4 & -1.0 \\
 \end{tabular}
 \end{table}
