--- a/results/llm/r_1_llm.ipynb
+++ b/results/llm/r_1_llm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +185,7 @@
     "# to latex\n",
     "# all numbers one decimal place\n",
     "latex_df = latex_df.applymap(lambda x: f\"{x:.1f}\" if isinstance(x, float) else x)\n",
+    "latex_df['PoE - MCP'] = latex_df['PoE - MCP'].apply(lambda x: \"+\" + x if float(x) > 0 else x)\n",
     "\n",
     "latex_df.style.to_latex(\n",
     "    buf=\"llm_camera_ready.tex\",\n",
@@ -192,7 +193,7 @@
     "    position=\"h\",\n",
     "    position_float=\"centering\",\n",
     "    label=\"tab:llm\",\n",
-    "    caption=r\"PoE's zero-shot performance on ChatGPT (\\texttt{gpt-3.5-turbo-0613}). The last 4 rows represent 4 logical reasoning tasks introduced in Section \\ref{sec:logical_reasoning}. PoE consistently outperforms MCP, especially on logical reasoning tasks.\",\n",
+    "    caption=r\"PoE's zero-shot performance on ChatGPT (\\texttt{gpt-3.5-turbo-0613}). The bottom 4 tasks are logical reasoning tasks from Section \\ref{sec:logical_reasoning}. PoE consistently outperforms MCP, especially on logical reasoning tasks.\",\n",
     "    multicol_align=\"c\",\n",
     "    multirow_align=\"c\",\n",
     ")\n"
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -240,31 +241,31 @@
        "      <th>SIT</th>\n",
        "      <td>2.0</td>\n",
        "      <td>19.4</td>\n",
-       "      <td>17.4</td>\n",
+       "      <td>+17.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ANLI</th>\n",
        "      <td>40.2</td>\n",
        "      <td>44.6</td>\n",
-       "      <td>4.4</td>\n",
+       "      <td>+4.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SS</th>\n",
        "      <td>79.4</td>\n",
        "      <td>82.8</td>\n",
-       "      <td>3.4</td>\n",
+       "      <td>+3.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CQA</th>\n",
        "      <td>75.0</td>\n",
        "      <td>77.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>+2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LD</th>\n",
        "      <td>37.6</td>\n",
        "      <td>38.0</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>+0.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SIQA</th>\n",
@@ -288,19 +289,19 @@
        "      <th>RACO</th>\n",
        "      <td>4.8</td>\n",
        "      <td>50.4</td>\n",
-       "      <td>45.6</td>\n",
+       "      <td>+45.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>IMT</th>\n",
        "      <td>34.0</td>\n",
        "      <td>49.8</td>\n",
-       "      <td>15.8</td>\n",
+       "      <td>+15.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LA</th>\n",
        "      <td>50.0</td>\n",
        "      <td>55.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>+5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CLD</th>\n",
@@ -313,72 +314,29 @@
        "</div>"
       ],
       "text/plain": [
-       "method   MCP   PoE  PoE - MCP\n",
-       "Task                         \n",
-       "SIT      2.0  19.4       17.4\n",
-       "ANLI    40.2  44.6        4.4\n",
-       "SS      79.4  82.8        3.4\n",
-       "CQA     75.0  77.0        2.0\n",
-       "LD      37.6  38.0        0.4\n",
-       "SIQA    72.6  71.2       -1.4\n",
-       "DQA     48.8  42.6       -6.2\n",
-       "CC      79.6  66.8      -12.8\n",
-       "RACO     4.8  50.4       45.6\n",
-       "IMT     34.0  49.8       15.8\n",
-       "LA      50.0  55.0        5.0\n",
-       "CLD     92.4  91.4       -1.0"
+       "method   MCP   PoE PoE - MCP\n",
+       "Task                        \n",
+       "SIT      2.0  19.4     +17.4\n",
+       "ANLI    40.2  44.6      +4.4\n",
+       "SS      79.4  82.8      +3.4\n",
+       "CQA     75.0  77.0      +2.0\n",
+       "LD      37.6  38.0      +0.4\n",
+       "SIQA    72.6  71.2      -1.4\n",
+       "DQA     48.8  42.6      -6.2\n",
+       "CC      79.6  66.8     -12.8\n",
+       "RACO     4.8  50.4     +45.6\n",
+       "IMT     34.0  49.8     +15.8\n",
+       "LA      50.0  55.0      +5.0\n",
+       "CLD     92.4  91.4      -1.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "latex_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# to produce latex table.\n",
-    "\n",
-    "\n",
-    "# post processing in latex: repalce table with table*\n",
-    "# add \\hline\n",
-    "\n",
-    "# change format, and concatenate two strings.\n",
-    "sing_all = vis_mean.applymap(lambda x: f\"{x*100:.1f}\") + vis_std.applymap(lambda x: f\"\\\\textsubscript{{{x*100:.1f}}}\")\n",
-    "method_index = [\n",
-    "                ('accuracy',    'multiple_choice_prompt'), \n",
-    "                ('accuracy',    'process_of_elimination(mcp)'),]\n",
-    "sing_all = sing_all.reindex(method_index, axis=\"columns\")\n",
-    "\n",
-    "\n",
-    "latex_means = sing_all.rename(columns={\n",
-    "                                         \"multiple_choice_prompt\": \"MCP\",\n",
-    "                                         \"process_of_elimination(mcp)\": \"PoE\",\n",
-    "                                         },\n",
-    "                                      #    index={0: \"0 shot\", 3.0: \"3 shot\"}\n",
-    "                                       )\n",
-    "\n",
-    "latex_means.index = latex_means.index.set_names([\"Dataset\", \"N Shot\"])\n",
-    "# transpose the table\n",
-    "# latex_means = latex_means.transpose()\n",
-    "\n",
-    "latex_means.style.to_latex(\n",
-    "    buf=f\"llm.tex\",\n",
-    "    column_format=\"lcccc\",\n",
-    "    position=\"h\",\n",
-    "    position_float=\"centering\",\n",
-    "    label=\"tab:llm\",\n",
-    "    caption=\"PoE on ChatGPT.\",\n",
-    "    multicol_align=\"c\",\n",
-    "    multirow_align=\"c\",\n",
-    ")"
    ]
   },
   {
